--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,70 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.error {
+  color: red;
+}
+
+.container {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1100px;
+  padding: 0 15px;
+}
+
+.header__inner {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  min-height: 80px;
+}
+
+.header__list {
+  display: flex;
+  width: 100%;
+  padding: 0;
+}
+
+.header__item {
+  display: block;
+  list-style: none;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.conversion__inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -10px;
+  margin-left: -10px;
+}
+
+.conversion__item {
+  display: block;
+  width: 100%;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.conversion__input {
+  display: block;
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  box-shadow: none;
+  margin-bottom: 10px;
+}
+
+.conversion__select {
+  display: block;
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 0;
+  box-shadow: none;
 }
